[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meter-sdk"
version = "0.2.0"
description = "Python SDK for Meter Scraper API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
]
authors = [
    {name = "Meter"},
]
keywords = ["scraping", "api", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://api.meter.sh"
Documentation = "https://api.meter.sh/docs"

